# bay-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  GRAMMAR.md  README.md  bay.toml  release.toml
.github/workflows/: post-release.yaml
examples/arrays/: bay.toml
examples/arrays/src/: main.bay
examples/linked-list/: bay.toml
examples/linked-list/src/: main.bay
examples/subranges/: bay.toml
examples/subranges/src/: main.bay
src/: codegen.rs  config.rs  error.rs  main.bay  main.rs  parser.rs  prelude.rs  scope.rs  store.rs  test_parser.rs  test_tokenizer.rs  tokenize.rs  tokenizer.rs  type_checker.rs
src/backends/: mod.rs  wasm32.rs
src/reprs/: concrete.rs  hir.rs  ir.rs  mod.rs  token.rs
