[package]
name = "bay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
dashmap = "6.1.0"
lazy_static = "1.5.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
